Removed the horizontal overflow in Login and Signup. Issue-#389. (#391)

--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -5,6 +5,12 @@
   height: 100vh;
 }
 
+.scroll-no{
+   max-width: 100%; 
+  overflow-y: hidden;
+}
+
+
 // .back-img{
 //   background-image: linear-gradient(90deg, rgba(179,227,221,1) 0%, rgba(128,208,199,1) 20%, rgba(0,147,233,1) 40%, rgba(0,147,233,1) 60%, rgba(128,208,199,1) 80%, rgba(179,227,221,1) 100%);
 // 	background-size: 400% 400%;
